# BDAS2026_Project5_Prognostic-biomarkers-in-Idiopathic-pulmonary-fibrosis

./: .gitignore  CHANGELOG.md  LICENSE  Notebook_2_Preprocess_Dicom.ipynb  Notebook_3_Radiomics.ipynb  Notebook_4_ToDo.ipynb  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
